# rcalc

./: .gitignore  Cargo.toml  flake.nix  shell.nix
src/: main.rs
