[package]
name = "rcalc"
description = "A Reverse Polish Notation, multiple precision calculator"
version = "0.1.0"
authors = ["Jimmy Brisson <theotherjimmy@gmail.com>"]
edition = "2018"
license = "MPL2"
repository = "https://github.com/theotherjimmy/rcalc"

[dependencies]
num-traits = "0.2"
ramp = "0.5.9"
redox_liner = "0.5.1"
termion = "1.4.0"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
